# rag_app

./: .gitignore  README.md  app.py  config.py  ingest.py  pyproject.toml  rag_chain.py  requirements.txt
utils/: loaders.py
